integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__search_assets_show_native_balance.snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "total": 0,
  "limit": 1000,
  "items": [],
  "nativeBalance": {
    "lamports": 15175044086940527,
    "price_per_sol": 127.519864247,
    "total_price": 1935119561908896300.0
  }
}
