integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__show_native_balance_false-search_assets_show_native_balance.snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 1,
  "limit": 1000,
  "cursor": "843gdpsTE4DoJz3ZoBsEjAqT8UgAcyF5YojygGgGZE1f",
  "items": [
    {
      "interface": "ProgrammableNFT",
      "id": "843gdpsTE4DoJz3ZoBsEjAqT8UgAcyF5YojygGgGZE1f",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://nftstorage.link/ipfs/bafybeihaky4htq6obur3ziksyanpdoqmrnefben3dbecddru52xh2sdkii/1232.json",
        "files": [],
        "metadata": {
          "name": "Phantom Mage #1233",
          "symbol": "PM",
          "token_standard": "ProgrammableNonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "GMhP98kXvfziKNfq1nP99AbWtZAweLu3DFz5Vs5ZaVTy",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0555,
        "basis_points": 555,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [
        {
          "address": "5KtTmcxYYzK5mR7gEtjVX2eBBK1g7YjVbvsMBAbyf9uK",
          "share": 0,
          "verified": true
        },
        {
          "address": "HmkCMBPdY6MixHP8hxsM8G1UwJH3fBN2itWagnYoXASR",
          "share": 100,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": true,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "BzbdvwEkQKeghTY53aZxTYjUienhdbkNVkgrLV6cErke"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "DPBEGb2DajfkannVZ6J4NxRY2ovz1yn1j36i1WVdZVpW"
      }
    }
  ]
}
