integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__show_native_balance_true_invalid_owner-search_assets_show_native_balance.snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 0,
  "limit": 1000,
  "items": [],
  "nativeBalance": {
    "lamports": 0,
    "price_per_sol": 100.0,
    "total_price": 0.0
  }
}
